Implementar un sistema de salut que pugui ser consultat per un sistema centralitzat de monitoratge